--- a/kernel.Rmd
+++ b/kernel.Rmd
@@ -11,10 +11,10 @@ load("./data/kernel_9004_500.Rdata")
 load("./data/y.Rdata")
 
 X <- kernel_90004
-y <- mortality
+y <- as.factor(mortality)
 
 n = nrow(X)
-trainn = 200
+trainn = 50
 testn = n - trainn
 
 ntrees = 1
@@ -39,7 +39,7 @@ testY = y[-trainid]
 ```{r}
 n <- 1000
 BM <-  matrix(NA, nrow = n, ncol = n)
-Y <- rep(c(1,0,2,3), each = n/4)
+Y <- as.factor(rep(c(0,1), each = n/2))
 
 for (i in 1:n) {
   
@@ -73,13 +73,13 @@ for (i in 1:n) {
 X <- BM
 y <- Y
 n = nrow(X)
-trainn = 0.7 * n
+trainn = 0.1 * n
 testn = n - trainn
 
-ntrees = 100
+ntrees = 1000
 ncores = 1
 nmin = 5
-mtry = 10
+mtry = 3
 sampleprob = 0.85
 rule = "best"
 nsplit = ifelse(rule == "best", 0, 3)
@@ -97,7 +97,7 @@ testY = y[-trainid]
 
 
 ```{r,message=FALSE}
-RLTfit <- RLT(trainX, as.factor(trainY), ntrees = ntrees, ncores = ncores, nmin = nmin/2, mtry = mtry, split.gen = rule, nsplit = nsplit, resample.prob = sampleprob, importance = importance)
+RLTfit <- RLT(trainX, trainY, ntrees = ntrees, ncores = ncores, nmin = nmin/2, mtry = mtry, split.gen = rule, nsplit = nsplit, resample.prob = sampleprob, importance = importance)
 
 RLTPred <- predict.RLT(RLTfit, testX, ncores = ncores)
 #treePred <- apply(RLTPred$Prediction , 1, function(x) mean(x,na.rm = TRUE))
@@ -112,13 +112,18 @@ Ktest <- graph.kernel(RLTfit, testX, trainX)
 
 
 ```{r}
+trainX
+trainY
+```
+
+```{r}
 #library('plot.matrix')
 RLTKtrain <- Ktrain$Kernel/ntrees
 RLTKtest <- Ktest$Kernel/ntrees 
 
 trainK <- exp(-trainX/1000)
 
-pred <- RLTKtest %*% trainY/rowSums(RLTKtest)
+pred <- RLTKtest %*% as.numeric(trainY)/rowSums(RLTKtest)
 
 table(as.numeric(pred > 0.5), testY)
 
@@ -144,7 +149,7 @@ for (i in 1:10) {
   testX = X[-trainid,trainid]
   testY = y[-trainid]
   
-  RLTfit <- RLT(trainX, as.factor(trainY), ntrees = ntrees, ncores = ncores, nmin = nmin/2, mtry = mtry, split.gen = rule, nsplit = nsplit, resample.prob = sampleprob, importance = importance)
+  RLTfit <- RLT(trainX, as.factor(trainY), ntrees = 100, ncores = ncores, nmin = nmin/2, mtry = mtry, split.gen = rule, nsplit = nsplit, resample.prob = sampleprob, importance = importance)
   
   RLTPred <- predict.RLT(RLTfit, testX, ncores = ncores)
   treePred <- apply(RLTPred$Prediction , 1, function(x) mean(x,na.rm = TRUE))
@@ -165,6 +170,16 @@ for (i in 1:10) {
   
   per[2,i] <- mean(as.numeric(treePred > 0.5) == testY)
   }
+
+```
+
+
+
+
+```{r}
+
+
+
 
 ```
 
